@@ -122,6 +122,18 @@
 
 2011-09-21  Gavin Barraclough  <barraclough@apple.com>
 
+        Add X86 GPRInfo for DFG JIT.
+        https://bugs.webkit.org/show_bug.cgi?id=68586
+
+        Reviewed by Geoff Garen.
+
+        * dfg/DFGGPRInfo.h:
+        (JSC::DFG::GPRInfo::toRegister):
+        (JSC::DFG::GPRInfo::toIndex):
+        (JSC::DFG::GPRInfo::debugName):
+
+2011-09-21  Gavin Barraclough  <barraclough@apple.com>
+
         Should support value profiling on CPU(X86)
         https://bugs.webkit.org/show_bug.cgi?id=68575
 
